--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Streamy App</title>
+    <title>Streams and Videos App</title>
     <script src="https://apis.google.com/js/api.js"></script>
   </head>
   <body>
